added file input@create page.html

--- a/backend/templates/components/fixed_bottom_footer.html
+++ b/backend/templates/components/fixed_bottom_footer.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://github.com/3p1463k/mapapi">Folium / FastApi code at GitHub</a>
+    <a class="navbar-brand" href="#">Folium + FastApi</a>
   </div>
 </nav>
