--- a/backend/templates/general_pages/create_map.html
+++ b/backend/templates/general_pages/create_map.html
@@ -10,14 +10,81 @@
 
 <div class="container">
 
-    <div class="col-md-6">
-      <div class="mb-3">
-          <label for="formFile" class="form-label">Default file input example</label>
-          <input class="form-control" type="file" id="formFile">
-      </div>
-    </div>
-</div>
 
+
+<figure class="text-center">
+  <blockquote class="blockquote">
+    <h3>
+    Upload your data here,
+    <small class="text-muted">accepted are CSV, Excel up to 10.000 lines</small>
+  </h3>
+    <p>Pandas will create dataframe and feed it to Folium.</p>
+    <p>Afterwards you can download map as html.</p>
+
+  </blockquote>
+</figure>
+
+
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Latitude</th>
+        <th scope="col">Longitude</th>
+        <th scope="col">Description</th>
+        <th scope="col">Value</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>50.65973</td>
+        <td>14.04430</td>
+        <td>some name</td>
+        <td>some value</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>50.65973</td>
+        <td>14.04430</td>
+        <td>some name</td>
+        <td>some value</td>
+
+
+      </tr>
+    </tbody>
+  </table>
+
+
+ <div class="row justify-content-center">
+  <div class="col-md-4 ">
+      <div class="mb-3">
+          <input class="form-control " type="file" id="formFile">
+      </div>
+  </div>
+
+  <form method="POST">
+          <div class="mb-3">
+            <label>Username</label>
+            <input type="text" required class="form-control" name="username" value="{{username}}" placeholder="username">
+          </div>
+          <div class="mb-3">
+            <label>Email</label>
+            <input type="text" required placeholder="Your email" name="email" value="{{email}}" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label>Password</label>
+            <input type="password" required placeholder="Choose a secure password" value="{{password}}" name="password" class="form-control">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
+</div>
+<div class="d-grid gap-2 col-6 mx-auto">
+  <button class="btn btn-outline-dark" type="button">Upload</button>
+</div>
 
 
 {% endblock %}
