added processing of file upload

--- a/backend/templates/components/navbar.html
+++ b/backend/templates/components/navbar.html
@@ -8,7 +8,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="/">Home</a>
         <a class="nav-link" href="/map">Create</a>
-        <a class="nav-link" href="#">Help</a>
+        <a class="nav-link" href="/help">Help</a>
         <a class="nav-link disabled">My Maps</a>
       </div>
     </div>
