--- a/backend/templates/general_pages/create_map.html
+++ b/backend/templates/general_pages/create_map.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-<h3 class="ex1">
+<h3 >
   Upload CSV, JSON, Excel
 </h3>
 
@@ -19,16 +19,29 @@
        <input class="form-control " name="file" type="file" id="formFile">
      </div>
      <div class="d-grid gap-2 col-6 mx-auto">
-        <button  class="btn btn-outline-dark" type="submit">Upload</button>
+        <button  class="btn btn-outline-dark" type="submit">Generate Map</button>
      </div>
    </div>
  </div>
 </form>
 
-<h4 class="ex1">
-  Or enter manually bellow
-</h4>
 
+</div>
+
+<div class="container">
+<form action="/manual" method="get">
+<h3>
+  To enter manually or see example press bellow
+</h3>
+
+<div class="row justify-content-center">
+  <div class="col-md-4 ">
+    <div class="d-grid gap-2 col-6 mx-auto">
+       <button  class="btn btn-outline-dark" type="submit" ">See example</button>
+    </div>
+  </div>
+</div>
+</form>
 
 </div>
 
