added build map page,routing

--- a/backend/templates/components/fixed_bottom_footer.html
+++ b/backend/templates/components/fixed_bottom_footer.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Folium + FastApi</a>
+    <a class="navbar-brand" href="https://fastapi.tiangolo.com/">Created with FastApi and Folium</a>
   </div>
 </nav>
