--- a/backend/templates/general_pages/help_page.html
+++ b/backend/templates/general_pages/help_page.html
@@ -8,12 +8,9 @@
 {% block content %}
 
 
-<div class="container">
-  <h3 class="ex1">
-    Upload CSV, JSON, Excel
-  </h3>
+<div class="container-fluid">
 
-<h5>The uploaded data must have 4 columns, column names dont matter </h5>
+<h5>The data must have 4 columns, column names dont matter </h5>
 
 <table class="table table-bordered">
   <thead>
