--- a/backend/templates/components/navbar.html
+++ b/backend/templates/components/navbar.html
@@ -1,13 +1,14 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-transparent">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://github.com/3p1463k/mapapi">MapApi@GitHub</a>
+    <a class="navbar-brand" href="https://github.com/3p1463k/mapapi">Code@GitHub</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/map">Create</a>
+        <a class="nav-link" href="/map">Upload</a>
+        <a class="nav-link" href="/builder">Build</a>
         <a class="nav-link" href="/help">Help</a>
         <a class="nav-link disabled">My Maps</a>
       </div>
