--- a/backend/templates/general_pages/create_manualy.html
+++ b/backend/templates/general_pages/create_manualy.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="container ">
+<div class="container-fluid">
 
 <h3 >
   Generate example map or enter coordinates
