added download page

--- a/backend/templates/components/navbar1.html
+++ b/backend/templates/components/navbar1.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="/map">Upload</a>
         <a class="nav-link" href="/builder">Build</a>
         <a class="nav-link" href="/help">Help</a>
-        <a class="nav-link" href="/download" ">My Maps</a>
+        <a class="nav-link" href="/download" ">My Maps<span class="badge bg-secondary">new</span></a>
       </div>
     </div>
   </div>
