--- a/backend/templates/general_pages/builder_page.html
+++ b/backend/templates/general_pages/builder_page.html
@@ -9,7 +9,9 @@
   <div class="row">
   <div class="col-1 mt-4" >
 
-  <div class="form-check">
+  <form action="/builder" enctype="multipart/form-data" method="post">
+
+  <div class="form-check mb-2">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
     <label class="form-check-label" for="exampleRadios1">
     Pin
@@ -22,38 +24,42 @@
     </label>
   </div>
 
+  <div class="mb-2">
   <label for="customRange2" class="form-label">Circle size</label>
-  <input type="range" class="form-range" min="0" max="100" id="customRange2">
+  <input type="range" name="circle_size" class="form-range" min="0" max="500" value=50 id="customRange2">
+  </div>
 
-
+  <div class="mb-1">
+  <label for="customRange3" class="form-label">Circle weight</label>
+  <input type="range" name=circle_weight class="form-range" value = 1 min="0" max="15" step="1" id="customRange3">
+  </div>
 
   <div>
 
-    <label for="exampleColorInput" class="form-label">Color picker</label>
-    <input type="color" class="form-control form-control-color mb-4" id="exampleColorInput" value="#563d7c" title="Choose your color">
+    <label for="exampleColorInput" class="form-label">Circle fill</label>
+    <input type="color" name="colorpickr" class="form-control form-control-color mb-4" id="exampleColorInput" value="#563d7c" title="Choose your color">
 
   </div>
 
 
 
-  <form action="/builder" enctype="multipart/form-data" method="post">
 
-      <div >
+      <div class= "mb-2">
         <label>Latitude</label>
         <input type="text" name="lat" value=36.11229079304089 class="form-control">
       </div>
 
-      <div >
+      <div class= "mb-2">
         <label>Longitude</label>
         <input type="text" name="lon" value=-5.345198281458614514 class="form-control">
       </div>
 
-      <div>
+      <div class= "mb-2">
         <label>Description</label>
         <input type="text" name="description" value="LalaLand" class="form-control">
       </div>
 
-      <div >
+      <div class= "mb-2">
         <label>Value</label>
         <input type="text" name="value" value=5  class="form-control">
       </div>
