--- a/backend/templates/general_pages/create_map.html
+++ b/backend/templates/general_pages/create_map.html
@@ -7,8 +7,9 @@
 {% block content %}
 
 <div class="container-fluid">
+  <div class="row">
 
-<h3 >
+<h3 class = "mt-5">
   Upload CSV, JSON, Excel
 </h3>
 
@@ -25,10 +26,13 @@
  </div>
 </form>
 
+</div>
 
 </div>
 
-<div class="container">
+<div class="container-fluid">
+  <div class="row">
+
 <form action="/manual" method="get">
 <h3>
   To enter manually or see example press bellow
@@ -43,6 +47,7 @@
 </div>
 </form>
 
+</div>
 </div>
 
 {% endblock %}
