renamed routers added zoom,download choice

--- a/backend/templates/components/navbar.html
+++ b/backend/templates/components/navbar.html
@@ -7,8 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/map">Upload</a>
-        <a class="nav-link" href="/builder">Build</a>
+        <a class="nav-link" href="/upload">Upload</a>
+        <a class="nav-link" href="/builder">Builder</a>
         <a class="nav-link" href="/help">Help</a>
         <a class="nav-link" href="/download" ">My Maps</a>
       </div>
