--- a/backend/templates/general_pages/generated.html
+++ b/backend/templates/general_pages/generated.html
@@ -1,7 +1,7 @@
 {% extends "shared/base.html" %}
 
 {% block title %}
-  <title>Create Map</title>
+  <title>Generated Map</title>
 {% endblock %}
 
 {% block content %}
