--- a/backend/templates/general_pages/manual.html
+++ b/backend/templates/general_pages/manual.html
@@ -1,19 +1,21 @@
 {% extends "shared/base.html" %}
 
 {% block title %}
-  <title>Create Map</title>
+  <title>Manual Map</title>
 {% endblock %}
 
 {% block content %}
 
 <div class="container-fluid">
+  <div class="row ">
+    <h3 class="h3 text-center fw-bold mt-2 mb-2">
+      Generate example map or enter coordinates
+    </h3>
+  </div>
 
-<h3 >
-  Generate example map or enter coordinates
-</h3>
 
 <form action="/generated" enctype="multipart/form-data" method="post">
-  <div class="row align-items-start">
+  <div class="row align-items-start mt-2">
 
     <div class="col">
       <label>Latitude</label>
