--- a/backend/templates/general_pages/upload.html
+++ b/backend/templates/general_pages/upload.html
@@ -19,7 +19,7 @@
  <div class="row justify-content-center">
    <div class="col-md-4 mt-2">
      <div class="mb-3">
-       <input class="form-control " name="file" type="file" id="formFile">
+       <input class="form-control " accept=".csv" name="file" type="file" id="formFile">
      </div>
      <div class="d-grid gap-2 col-6 mx-auto mt-1">
         <button  class="btn btn-outline-dark" type="submit">Generate Map</button>
